main-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: main-service
  namespace: services
spec:
  replicas: 1
  selector:
    matchLabels:
      app: main-service
  template:
    metadata:
      labels:
        app: main-service
    spec:
      containers:
        - name: main-service
          image: ayushneosoft/goodsharing-main-service:v1.0.7
          imagePullPolicy: Always
          ports:
            - containerPort: 4000
