main-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: main-service
  namespace: services
spec:
  selector:
    app: main-service
  ports:
    - port: 80
      targetPort: 4000
