main-service-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: main-service-ingress
  namespace: services
spec:
  ingressClassName: nginx
  rules:
    - host: goodsharing.cloud
      http:
        paths:
          - path: /graphql
            pathType: Prefix
            backend:
              service:
                name: main-service
                port:
                  number: 80
